# tap_buddy_pg_dbt

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: bq_assessment_events.csv  bq_messages.csv  bq_video_events.csv  crm_students.csv
data/old/: bq_assessment_events.csv  bq_messages.csv  bq_video_events.csv
tap_buddy_pg_dbt/: .user.yml  dbt_project.yml
tap_buddy_pg_dbt/models/bronze/: bronze_bq_assessment_events.sql  bronze_bq_messages.sql  bronze_bq_video_events.sql  bronze_crm_students.sql  properties.yml
tap_buddy_pg_dbt/models/gold/: gold_activity_engagement.sql  gold_activity_funnel.sql  gold_cumulative_engagement.sql
tap_buddy_pg_dbt/models/silver/: silver_activity_assessment_signals.sql  silver_activity_message_signals.sql  silver_activity_spine.sql  silver_activity_video_signals.sql  silver_activity_windows.sql  silver_video_events.sql
tap_buddy_pg_dbt/models/source/: sources.yml
